--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !.config/foot/*
 !.config/sway/
 !.config/sway/*
+!.config/swaylock/
+!.config/swaylock/*
 !.config/waybar/
 !.config/waybar/*
 !.config/gtk-3.0/
