--- a/.config/sway/config
+++ b/.config/sway/config
@@ -51,6 +51,10 @@ focus_on_window_activation focus
 
 # ========== GENERAL HOTKEYS ==========
 
+
+# Switch to the main layout, to ensure that all shortcuts work
+bindsym $mod+tab input "type:keyboard" xkb_switch_layout 0
+
 # Reload sway config.
 bindsym $mod+insert reload
 
@@ -206,7 +210,7 @@ input type:keyboard {
     
     # LeftControl + RightControl chooses next layout.
     # RightControl + LeftControl chooses previous layout.
-    xkb_options grp:ctrls_toggle
+    xkb_options grp:caps_toggle
 }
 
 
