--- a/.config/sway/config
+++ b/.config/sway/config
@@ -187,14 +187,14 @@ bindsym $mod+f4 fullscreen
 bindcode $mod+$f floating toggle
 # Toggle focus between tiled/floating areas.
 bindcode $mod+$g focus mode_toggle
+# Toggle stickiness on the floating window.
+# If you move between workspaces, sticky floating windows move with you.
+bindcode $mod+$h sticky toggle
 
 # Remove to the scratchpad
 bindcode $mod+$r move scratchpad
 # Take from the scratchpad
 bindcode $mod+$t scratchpad show
-
-# If you move between workspaces, sticky floating windows move with you.
-bindcode $mod+$y sticky toggle
 
 
 # ========== SPECIAL HOTKEYS ==========
@@ -258,7 +258,7 @@ input "1267:12548:ELAN1200:00_04F3:3104_Touchpad" {
 }
 
 input "1578:16641:MOSART_Semi._2.4G_Keyboard_Mouse" {
-    pointer_accel 1
+    pointer_accel 0.6
 }
 
 
